2002-04-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (parse_options, parse_g_options): Check
	  for duplication options.
	* client-src/client_util.h (COMPR_SERVER_FAST, COMPR_SERVER_BEST):
	  Declare.
	* client-src/selfcheck.c: Check for COMPR_FAST or COMPR_BEST.

2002-04-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/selfcheck.c (host):Remove variable,use g_options->hostname.
	* client-src/sendbackup.c: Ditto.
	* client-src/sendsize.c: Ditto.

2002-04-20  Thomas Hepper <th@ant.han.de>
	* changer-src/scsi-aix.c: Fixed bug with the setting of the GSC driver
	  Added detection and setting of device type tape/robot
	* changer-src/scsi-bsd.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-cam.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-hpux_new.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-linux.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-solaris.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-irix.c: Added detection and setting of device 
	  type tape/robot
	* changer-src/scsi-changer-driver.c: Now there is an device handler
	  for an generic tape and an generic robot.
	  The result length from the read element status is now checked
	  and only fields which are in this area are used.. (Some librarys
	  retrun only 4 byte, expected are 52)
	* changer-src/scsi-defs.h: Fixed the some defines in 
	  ElementStatusPage_T, 

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* client-src/client_util.c (parse_g_options) New function to parse
	  the global options string.
	* client-src/client_util.h (parse_g_options): Prototype.
	* client-src/selfcheck.c: use parse_g_options.
	* client-src/sendbackup.c: use parse_g_options.
	* client-src/sendsize.c: use parse_g_options.

2002-04-19  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
